correcion e implementacion del mapa
